Fixed keyboard covering input issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@
   }
 
   .note-col {
-    border-top: 1px solid #eee;
+    border-top: 1px solid #ccc;
     height: calc(100% - 143px);
   }
 
