--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -56,8 +56,7 @@ h1 {
     top: 1px;
   }
 
-  &:hover,
-  &:focus {
+  &:hover {
     text-decoration: none;
     opacity: 0.5;
   }
